[package]
name = "cb_patcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
walkdir = "2.4"
directories = "5.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
